[l10n] Updated Czech translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-05  Miroslav Kure  <kurem@debian.cz>
+
+	* cs.po: Updated to 279t.
+
 2006-02-21  Szervác Attila  <sas@321.hu>
 
 	* hu.po: 2 small bugfixes & little improvements
