--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-05  Guillem Jover  <guillem@debian.org>
+
+	* debian/control (Build-Depends): Do not depend on libselinux1-dev
+	in GNU/kFreeBSD amd64.
+
 2006-02-28  Matt Kraai  <kraai@ftbfs.org>
 
 	* scripts/dpkg-gencontrol.pl: Fix typo (occoured -> occurred).
