Add new quiet option to dpkg-source to supress warnings. Closes: #355065

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-03-05  Guillem Jover  <guillem@debian.org>
 
+	* scripts/controllib.pl.in (quiet_warnings): New variable.
+	(warn): Do not print if quiet_warnings.
+	* dpkg-source.pl (usageversion): Document new option `-q'.
+
+2006-03-05  Guillem Jover  <guillem@debian.org>
+
 	* debian/control (Build-Depends): Do not depend on libselinux1-dev
 	in GNU/kFreeBSD amd64.
 
