--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ dpkg (1.13.17~) UNRELEASED; urgency=low
   * Czech (Miroslav Kure).
 
   [ Updated dpkg Translations ]
+  * Italian (Lele Gaifax)
   * Simplified Chinese (Carlos Z.F. Liu).
   * Portuguese (Miguel Figueiredo).
   * Dutch (Bart Cornelis).
