--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-11  Lele Gaifax <lele@nautilus.homeip.net>
+
+        * it.po: Updated to 729t.
+
 2006-03-05  Miroslav Kure  <kurem@debian.cz>
 
 	* cs.po: Updated to 279t.
