Russian translation update

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-19  Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru.po: Updated to 729t.
+
 2006-02-21  Szervác Attila  <sas@321.hu>
 
 	* hu.po: Updated to 468t.
