Reintroduce removed entry. Fix dates. Add bug closure.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,17 +2,21 @@
 
 	* ru.po: Updated to 729t.
 
-2006-02-21  Szervác Attila  <sas@321.hu>
+2006-03-07  Szervác Attila  <sas@321.hu>
 
 	* hu.po: Updated to 468t.
 
-2006-02-11  Lele Gaifax <lele@nautilus.homeip.net>
+2006-03-07  Lele Gaifax  <lele@nautilus.homeip.net>
 
-        * it.po: Updated to 729t.
+	* it.po: Updated to 729t.
 
 2006-03-05  Miroslav Kure  <kurem@debian.cz>
 
 	* cs.po: Updated to 279t.
+
+2006-02-21  Szervác Attila  <sas@321.hu>
+
+	* hu.po: 2 small bugfixes & little improvements.
 
 2006-02-21  Miguel Figueiredo  <elmig@debianpt.org>
 
