--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.13.17~) UNRELEASED; urgency=low
+dpkg (1.13.17) unstable; urgency=low
 
   [ Frank Lichtenheld ]
   * Fix handling of -DArchitecure=foo in dpkg-gencontrol. Closes: #251911
@@ -39,7 +39,7 @@ dpkg (1.13.17~) UNRELEASED; urgency=low
   * Czech (Miroslav Kure).
   * Russian (Yuri Kozlov). Closes: #357724
 
- -- Bart Cornelis (cobaco) <cobaco@linux.be>  Sun, 19 Feb 2006 13:07:43 +0100
+ -- Guillem Jover <guillem@debian.org>  Mon, 20 Mar 2006 03:33:03 +0200
 
 dpkg (1.13.16) unstable; urgency=low
 
