--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.13.18~) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Mon, 20 Mar 2006 04:00:33 +0200
+
 dpkg (1.13.17) unstable; urgency=low
 
   [ Frank Lichtenheld ]
