--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-03-20  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Bump version to 1.13.18~.
+
+2006-03-20  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Release 1.13.17.
 
 2006-03-20  Guillem Jover  <guillem@debian.org>
