Man pages typos corrections

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,11 @@ dpkg (1.13.18~) UNRELEASED; urgency=low
   [ Updated dselect Translations ]
   * Spanish (Javier Fernández-Sanguino Peña). Closes: #357912
 
- -- Guillem Jover <guillem@debian.org>  Mon, 20 Mar 2006 04:00:33 +0200
+  [ Christian Perrier ]
+  * Correct typos in man pages. Thanks to A. Costa for spotting them
+    Closes: #358091, #358092, #358093, #358094, #358095 
+
+ -- Christian Perrier <bubulle@debian.org>  Tue, 21 Mar 2006 20:46:24 +0100
 
 dpkg (1.13.17) unstable; urgency=low
 
