--- a/man/C/dpkg-architecture.1
+++ b/man/C/dpkg-architecture.1
@@ -1,4 +1,4 @@
-.TH dpkg\-architecture 1 "2006-02-28" "Debian Project" "dpkg utililties"
+.TH dpkg\-architecture 1 "2006-02-28" "Debian Project" "dpkg utilities"
 .SH "NAME"
 dpkg\-architecture \- set and determine the architecture for package building
 .
@@ -45,7 +45,7 @@ Print the environment variables, one each line, in the format
 .TP
 .BI \-e debian-architecture
 Check for equality between two Debian Architectures, by default it will
-compare against the currect Debian Architecture, being it the host.
+compare against the current Debian Architecture, being it the host.
 .TP
 .BI \-i architecture-alias
 Check for identity of the current Debian Architecture against an
