--- a/man/C/dpkg-checkbuilddeps.1
+++ b/man/C/dpkg-checkbuilddeps.1
@@ -1,4 +1,4 @@
-.TH dpkg\-checkbuilddeps 1 "2006-02-28" "Debian Project" "dpkg utililties"
+.TH dpkg\-checkbuilddeps 1 "2006-02-28" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-checkbuilddeps - check build dependencies and conflicts
 .
