--- a/man/C/dpkg-source.1
+++ b/man/C/dpkg-source.1
@@ -305,7 +305,7 @@ build output directories.
 This is very helpful in cutting out extraneous files that get included
 in the .diff.gz, (eg: "debian/BUGS_TODO/*" or "debian/RCS/*,v"). For
 instance, if you maintain a package that you track via remote CVS,
-where you don't have access permissions for commiting the debian
+where you don't have access permissions for committing the debian
 control files and making tags for \fIcvs\-buildpackage(1)\fR, it is
 necessary to perform an extra checkout/update into a directory you
 keep pristine, to generate the .orig.tar.gz from. That directory will
@@ -685,7 +685,7 @@ with an alphanumeric. Variable substitutions are performed repeatedly
 until none are left; the full text of the field after the substitution
 is rescanned to look for more substitutions.
 
-After all the substitutions have been done each occurence of the
+After all the substitutions have been done each occurrence of the
 string
 .B ${}
 (which is not a legal substitution) is replaced with a
