Updated Danish translations

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-21  Claus Hindsgaul  <claus.hindsgaul@gmail.com>
+
+	* da.po: Updated to 286t.
+
 2006-03-20  Javier Fernández-Sanguino Peña  <jfs@computer.org>
 
 	* es.po: Updated to 286t.
