--- a/dselect/po/da.po
+++ b/dselect/po/da.po
@@ -4,18 +4,19 @@
 #
 # Claus Hindsgaul <claus_h@image.dk>, 2002, 2004, 2005, 2006.
 # reviewed by Ole Laursen <olau@hardworking.dk>, 2002.
+# Claus Hindsgaul <claus.hindsgaul@gmail.com>, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg_1.10.19_da\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-02-17 05:07+0200\n"
-"PO-Revision-Date: 2006-02-17 08:56+0200\n"
-"Last-Translator: Claus Hindsgaul <claus_h@image.dk>\n"
-"Language-Team: Danish <dansk@klid.dk>\n"
+"PO-Revision-Date: 2006-03-08 09:23+0100\n"
+"Last-Translator: Claus Hindsgaul <claus.hindsgaul@gmail.com>\n"
+"Language-Team: Danish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.1\n"
+"X-Generator: KBabel 1.11.2\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: dselect/basecmds.cc:121
@@ -285,7 +286,7 @@ msgstr "Genskab foreslået status for alle pakker"
 
 #: dselect/bindings.cc:160
 msgid "Revert to directly requested state for all packages"
-msgstr "Genskab direkte angivet status for alle pakker."
+msgstr "Genskab direkte angivet status for alle pakker"
 
 #: dselect/bindings.cc:163
 msgid "Select currently-highlighted access method"
@@ -756,7 +757,7 @@ msgstr "[T]ilgang"
 
 #: dselect/main.cc:138
 msgid "Choose the access method to use."
-msgstr "Vælg den ønskede tilgangsmetode"
+msgstr "Vælg den ønskede tilgangsmetode."
 
 #: dselect/main.cc:139
 msgid "u"
@@ -800,11 +801,11 @@ msgstr "k"
 
 #: dselect/main.cc:142
 msgid "[C]onfig"
-msgstr "[K]onfig."
+msgstr "[K]onfig"
 
 #: dselect/main.cc:142
 msgid "Configure any packages that are unconfigured."
-msgstr "Konfigurér eventuelle ikke-konfigurerede pakker"
+msgstr "Konfigurér eventuelle ikke-konfigurerede pakker."
 
 #: dselect/main.cc:143
 msgid "r"
@@ -835,26 +836,28 @@ msgid "menu"
 msgstr "menu"
 
 #: dselect/main.cc:150
-#, fuzzy, c-format
+#, c-format
 msgid "Debian `%s' package handling frontend version %s.\n"
-msgstr "Debian '%s' pakkehåndtering."
+msgstr "Debian '%s' pakkehåndterings-brugerflade version %s.\n"
 
 #: dselect/main.cc:153
 msgid ""
 "Copyright (C) 1994-1996 Ian Jackson.\n"
 "Copyright (C) 2000,2001 Wichert Akkerman.\n"
 msgstr ""
+"Copyright (C) 1994-1996 Ian Jackson.\n"
+"Copyright (C) 2000,2001 Wichert Akkerman.\n"
 
 #: dselect/main.cc:157
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
 "See %s --license for copyright and license details.\n"
 msgstr ""
-"Dette er frit programmel; se \"GNU General Public Licence\" version 2 eller\n"
+"Dette er frit programmel; se \"GNU General Public License\" version 2 eller\n"
 "senere for forhold vedrørende ophavsret. Der er INGEN garanti.\n"
-"Se dpkg-deb --licence for detaljerne.\n"
+"Se %s --license for detaljer vedrørende ophavsret og licens.\n"
 
 #: dselect/main.cc:171
 #, c-format
@@ -875,6 +878,21 @@ msgid ""
 "  access update select install config remove quit\n"
 "\n"
 msgstr ""
+"Brug: %s [<tilvalg> ...] [<handling> ...]\n"
+"\n"
+"Tilvalg:\n"
+"  --admindir <mappe>         Benyt <mappe> i stedet for %s.\n"
+"  --expert                   Aktivér eksperttilstand.\n"
+"  --debug <fil> | -D<fil>    Aktiverer aflusning, sender uddata til <file>.\n"
+"  --colour | --color skærmområde:[forgrund],[baggrund][:attr[+attr+..]]\n"
+"                             Indstil skærmfarver.\n"
+"  --help                     Vis denne hjælpebesked.\n"
+"  --version                  Vis versionsnummer.\n"
+"  --license                  Vis licensen.\n"
+"\n"
+"Handlinger:\n"
+"  access update select install config remove quit\n"
+"\n"
 
 #: dselect/main.cc:187
 #, c-format
@@ -926,13 +944,13 @@ msgid "Terminal does not appear to support highlighting.\n"
 msgstr "Terminalen lader ikke til at understøtte fremhævning.\n"
 
 #: dselect/main.cc:314
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Set your TERM variable correctly, use a better terminal,\n"
 "or make do with the per-package management tool %s.\n"
 msgstr ""
 "Sæt din TERM-variabel korrekt, brug en bedre terminal\n"
-"eller klar dig med enkeltpakke-håndteringsværktøjerne "
+"eller nøjes med enkeltpakke-håndteringsværktøjet %s.\n"
 
 #: dselect/main.cc:317
 msgid "terminal lacks necessary features, giving up"
@@ -1100,15 +1118,15 @@ msgstr "fejl inder læsning af godkendelse af programfejlmeddelelse"
 
 #: dselect/method.cc:235
 msgid "update available list script"
-msgstr "skript til opdatering af tilgængelighedsliste"
+msgstr "script til opdatering af tilgængelighedsliste"
 
 #: dselect/method.cc:239
 msgid "installation script"
-msgstr "installationsskript"
+msgstr "installationsscript"
 
 #: dselect/method.cc:287
 msgid "query/setup script"
-msgstr "skript til forespørgsel/opsætning"
+msgstr "script til forespørgsel/opsætning"
 
 #: dselect/methparse.cc:53
 #, c-format
@@ -1133,7 +1151,7 @@ msgstr "metoden '%.250s' har et for langt navn (%d > %d tegn)"
 #: dselect/methparse.cc:111
 #, c-format
 msgid "unable to access method script `%.250s'"
-msgstr "kunne ikke tilgå metodeskriptet '%.250s'"
+msgstr "kunne ikke tilgå metodescriptet '%.250s'"
 
 #: dselect/methparse.cc:117
 #, c-format
@@ -1687,3 +1705,4 @@ msgstr "Inst.ver"
 #: dselect/pkgtop.cc:295
 msgid "Avail.ver"
 msgstr "Tilg.ver"
+
