Updated Polish dpkg translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ dpkg (1.13.18~) UNRELEASED; urgency=low
   [ Updated dpkg Translations ]
   * Romanian (Sorin Batariuc). Closes: #356664
   * Danish (Claus Hindsgaul). Closes: #356188
+  * Polish (Robert Luberda).
 
   [ Updated dselect Translations ]
   * Spanish (Javier Fernández-Sanguino Peña). Closes: #357912
