--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-22  Robert Luberda <robert@debian.org>
+
+	* pl.po: Updated to 729t.
+
 2006-03-21  Claus Hindsgaul  <claus.hindsgaul@gmail.com>
 
 	* da.po: Updated to 729t.
