Updated Polish translation of dselect

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ dpkg (1.13.18~) UNRELEASED; urgency=low
   [ Updated dselect Translations ]
   * Spanish (Javier Fernández-Sanguino Peña). Closes: #357912
   * Danish (Claus Hindsgaul). Closes: #356188
+  * Polish (Robert Luberda).
 
   [ Christian Perrier ]
   * Correct typos in man pages. Thanks to A. Costa for spotting them
