--- a/dselect/po/pl.po
+++ b/dselect/po/pl.po
@@ -3,15 +3,16 @@
 # Piotr Roszatycki <dexter@debian.org>, 1999.
 # Bartosz Feñski <fenio@debian.org>, 2004-2005
 msgid ""
-msgstr ""
-"Project-Id-Version: dpkg 1.13\n"
-"Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
+msgstr "Project-Id-Version: dpkg 1.13.17\n"
 "POT-Creation-Date: 2006-02-17 05:07+0200\n"
-"PO-Revision-Date: 2006-02-17 08:57+0200\n"
-"Last-Translator: Bartosz Fenski <fenio@debian.org>\n"
+"PO-Revision-Date: 2006-03-24 20:04+0100\n"
+"Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
-"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 ||"
+" n%100>=20) ? 1 : 2;\n"
+"Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
+"MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8-bit\n"
 
 #: dselect/basecmds.cc:121
@@ -29,8 +30,8 @@ msgstr "Pomoc: "
 #: dselect/basecmds.cc:177
 msgid "Press ? for help menu, . for next topic, <space> to exit help."
 msgstr ""
-"Naci¶nij ?, by skorzystaæ z pomocy, . by przej¶æ do nastêpnego tematu, \n"
-"<spacjê>, by opu¶ciæ pomoc."
+"Naci¶nij ?, by skorzystaæ z pomocy, . (kropkê), by przej¶æ do nastêpnego\n"
+"tematu, <spacjê>, by opu¶ciæ pomoc."
 
 #: dselect/basecmds.cc:184
 msgid "Help information is available under the following topics:"
@@ -41,8 +42,8 @@ msgid ""
 "Press a key from the list above, <space> or `q' to exit help,\n"
 "  or `.' (full stop) to read each help page in turn. "
 msgstr ""
-"Wybierz klawisz z powy¿szej listy, <spacja> lub `q', by opu¶ciæ \n"
-"pomoc lub . (kropkê), by przegl±daæ po kolei strony pomocy. "
+"Wybierz klawisz z powy¿szej listy, <spacjê> lub `q', by opu¶ciæ \n"
+"pomoc lub `.' (kropkê), by przegl±daæ po kolei strony pomocy. "
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
@@ -413,9 +414,8 @@ msgstr ""
 "Powiniene¶/a¶ przeczytaæ listê klawiszy oraz opis ekranu.\n"
 "Wiele pomocy mo¿na uzyskaæ naciskaj±c `?' w ka¿dym momencie.\n"
 "\n"
-"Je¿eli wybór pakietów zosta³ dokonany, nale¿y wcisn±æ Enter dla "
-"potwierdzenia\n"
-" zmian lub `X', by wyj¶æ bez ich zapisania. Zostanie dokonane\n"
+"Je¿eli wybór pakietów zosta³ dokonany, nale¿y wcisn±æ <enter> dla\n"
+" potwierdzenia zmian lub `X', by wyj¶æ bez ich zapisania. Zostanie dokonane\n"
 " ostateczne sprawdzenie konfliktów i zale¿no¶ci - tu te¿ mo¿e pojawiæ siê\n"
 " lista pakietów.\n"
 "\n"
@@ -514,7 +514,7 @@ msgstr ""
 "\n"
 "Zosta³ przygotowany zestaw pakietów `sugerowanych' wraz ze wstêpnymi\n"
 "ustawieniami dotycz±cymi ich instalacji, wiêc je¶li chcesz mo¿esz je\n"
-"zaakceptowaæ naciskaj±c `Enter'. Mo¿esz anulowaæ problematyczne zmiany\n"
+"zaakceptowaæ naciskaj±c <enter>. Mo¿esz anulowaæ problematyczne zmiany\n"
 "naciskaj±c `X', a tym samym powracaj±c do g³ównej listy.\n"
 "\n"
 "Mo¿esz równie¿ poruszaæ siê po li¶cie i zmieniaæ ustawienia tak, by\n"
@@ -625,9 +625,8 @@ msgid ""
 "  Use the `i' key to cycle through the displays, and `I' to hide the\n"
 "  information display or expand it to use almost all of the screen.\n"
 msgstr ""
-"* Pod¶wietlenie: Jedna z linii jest pod¶wietlona. Okre¶la ona pakiet(y), dla "
-"którego\n"
-"  (ych) zostanie zmieniony stan po wci¶niêciu `+', '-' i `_'.\n"
+"* Pod¶wietlenie: Jedna z linii jest pod¶wietlona. Okre¶la ona pakiet(y),\n"
+"  którego(ych) stan zostanie zmieniony po wci¶niêciu `+', '-' i `_'.\n"
 "\n"
 "* Pasek na ¶rodku ekranu wy¶wietla informacje o stanie pakietu, który "
 "zosta³\n"
@@ -842,18 +841,19 @@ msgid "menu"
 msgstr "menu"
 
 #: dselect/main.cc:150
-#, fuzzy, c-format
+#, c-format
 msgid "Debian `%s' package handling frontend version %s.\n"
-msgstr "Debian `%s', nak³adka na program zarz±dzania pakietami."
+msgstr "Debian `%s', nak³adka na program zarz±dzania pakietami, wersja %s.\n"
 
 #: dselect/main.cc:153
 msgid ""
 "Copyright (C) 1994-1996 Ian Jackson.\n"
 "Copyright (C) 2000,2001 Wichert Akkerman.\n"
-msgstr ""
+msgstr "Copyright (C) 1994-1996 Ian Jackson.\n"
+"Copyright (C) 2000,2001 Wichert Akkerman.\n"
 
 #: dselect/main.cc:157
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "This is free software; see the GNU General Public License version 2 or\n"
 "later for copying conditions. There is NO warranty.\n"
@@ -863,7 +863,7 @@ msgstr ""
 "Powszechn± Licencjê Publiczn± GNU w wersji drugiej lub pó¼niejszej,\n"
 "by dowiedzieæ siê o warunkach rozpowszechniania.\n"
 "Brak JAKIEJKOLWIEK gwarancji.\n"
-"Wiêcej szczegó³ów w dpkg-deb --license.\n"
+"Wiêcej szczegó³ów w %s --license.\n"
 
 #: dselect/main.cc:171
 #, c-format
@@ -884,6 +884,21 @@ msgid ""
 "  access update select install config remove quit\n"
 "\n"
 msgstr ""
+"U¿ycie: %s [<opcja> ...] [<akcja> ...]\n"
+"\n"
+"Options:\n"
+"  --admindir <katalog>       U¿ywa <katalogu> zamiast %s.\n"
+"  --expert                   W³±cza tryb eksperta.\n"
+"  --debug <plik> | -D<plik>  W³±cza debugowanie, wysy³a wyj¶cie do <pliku>.\n"
+"  --colour | --color czê¶æ_widoku:[kolor_tekstu],[kolor_t³a][:atr[+atr+..]]\n"
+"                             Konfiguruje kolory ekranu.\n"
+"  --help                     Wy¶wietla ten komunikat pomocy.\n"
+"  --version                  Wy¶wietla informacje o wersji.\n"
+"  --license                  Wy¶wietla informacje o licencji.\n"
+"\n"
+"Akcje:\n"
+"  access update select install config remove quit\n"
+"\n"
 
 #: dselect/main.cc:187
 #, c-format
@@ -935,17 +950,17 @@ msgid "Terminal does not appear to support highlighting.\n"
 msgstr "Terminal nie obs³uguje pod¶wietlania.\n"
 
 #: dselect/main.cc:314
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Set your TERM variable correctly, use a better terminal,\n"
 "or make do with the per-package management tool %s.\n"
 msgstr ""
 "Proszê poprawnie ustawiæ zmienn± TERM, u¿yæ lepszego terminala,\n"
-"lub wykorzystaæ narzêdzie do zarz±dzania pakietami z linii poleceñ "
+"lub wykorzystaæ narzêdzie do zarz±dzania pakietami %s\n"
 
 #: dselect/main.cc:317
 msgid "terminal lacks necessary features, giving up"
-msgstr "brak potrzebnych funkcji dla terminala"
+msgstr "brak potrzebnych funkcji terminala"
 
 #: dselect/main.cc:395
 msgid ""
@@ -958,7 +973,7 @@ msgstr ""
 "\n"
 "\n"
 "U¿yj ^P oraz ^N, klawiszy kursora, pierwszych liter lub cyfr;\n"
-"Wci¶nij ENTER dla potwiedzenie wyboru.   ^L przerysowanie ekranu.\n"
+"Wci¶nij <enter> dla potwiedzenie wyboru. ^L - przerysowanie ekranu.\n"
 "\n"
 
 #: dselect/main.cc:410
@@ -1042,7 +1057,7 @@ msgid ""
 "Press <enter> to continue."
 msgstr ""
 "\n"
-"Wci¶nij ENTER aby kontynuowaæ."
+"Wci¶nij <enter>, aby kontynuowaæ."
 
 #: dselect/method.cc:144
 #, c-format
@@ -1098,7 +1113,7 @@ msgstr "funkcja `wait' zwróci³a nierozpoznany kod b³êdu %d.\n"
 #: dselect/method.cc:199
 #, c-format
 msgid "Press <enter> to continue.\n"
-msgstr "Wci¶nij ENTER aby kontynuowaæ.\n"
+msgstr "Wci¶nij <enter>, aby kontynuowaæ.\n"
 
 #: dselect/method.cc:201
 msgid "write error on standard error"
@@ -1414,7 +1429,7 @@ msgstr "Nowe"
 
 #: dselect/pkgdisplay.cc:99
 msgid "Updated"
-msgstr "Do-zaktualizowania"
+msgstr "Do zaktualizowania"
 
 #: dselect/pkgdisplay.cc:100
 msgid "Obsolete/local"
@@ -1438,7 +1453,7 @@ msgstr "Pakiety uszkodzone podczas instalacji"
 
 #: dselect/pkgdisplay.cc:105
 msgid "Newly available packages"
-msgstr "Pakiety nowodostêpne"
+msgstr "Pakiety nowo dostêpne"
 
 #: dselect/pkgdisplay.cc:106
 msgid "Updated packages (newer version is available)"
@@ -1697,3 +1712,4 @@ msgstr "Zainst."
 #: dselect/pkgtop.cc:295
 msgid "Avail.ver"
 msgstr "Dostêpne"
+
