--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-24  Robert Luberda <robert@debian.org>
+
+	* pl.po: Updated to 286t.
+	
 2006-03-21  Claus Hindsgaul  <claus.hindsgaul@gmail.com>
 
 	* da.po: Updated to 286t.
