Typos corrected in French translation of dpkg-source(1)

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,10 @@ dpkg (1.13.18~) UNRELEASED; urgency=low
   * Danish (Claus Hindsgaul). Closes: #356188
   * Polish (Robert Luberda).
 
+  [ Updated man pages translations ]
+  * Typos corrected in French dpkg-source man page
+    Thanks to Nicolas Bonifas who spotted them
+
   [ Christian Perrier ]
   * Correct typos in man pages. Thanks to A. Costa for spotting them
     Closes: #358091, #358092, #358093, #358094, #358095 
