--- a/man/fr/dpkg-source.1.fr.po
+++ b/man/fr/dpkg-source.1.fr.po
@@ -156,7 +156,7 @@ msgstr ""
 "shlibs.local>, B</etc/dpkg/shlibs.override>, le fichier B<shlibs>, (fichier "
 "du paquet contenant un fichier qui, selon B<objdump,> satisfait au système "
 "de dépendance envers les bibliothèques) ou bien B</etc/dpkg/shlibs.default>. "
-"Le premier trouvé est utilisé. Voyez B<dpkg-shlibdeps>(1) pour des "
+"Le premier trouvé est utilisé. Voyez B<dpkg-shlibdeps(1)> pour des "
 "précisions sur le format des fichiers qui traitent des dépendances envers "
 "les bibliothèques partagées."
 
