Add a '[!]' in --force-all help denoting that it is a dangerous option. Closes: #359935

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,10 @@ dpkg (1.13.18~) UNRELEASED; urgency=low
   * Correct typos in man pages. Thanks to A. Costa for spotting them
     Closes: #358091, #358092, #358093, #358094, #358095 
 
+  [ Guillem Jover ]
+  * Add a '[!]' in --force-all help denoting that it is a dangerous option.
+    Closes: #359935
+
  -- Christian Perrier <bubulle@debian.org>  Tue, 21 Mar 2006 20:46:24 +0100
 
 dpkg (1.13.17) unstable; urgency=low
