--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-30  Guillem Jover  <guillem@debian.org>
+
+	* src/main.c (setforce): Add a '[!]' next to 'all' to denote that
+	'--force-all' is dangerous.
+
 2006-03-20  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.13.18~.
