--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-04  Guillem Jover  <guillem@debian.org>
+
+	* utils/start-stop-daemon.c (main): Prefix the chroot path, if any,
+	when stating the exec file.
+
 2006-03-30  Guillem Jover  <guillem@debian.org>
 
 	* src/main.c (setforce): Add a '[!]' next to 'all' to denote that
