--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-04  Jared Spiegel  <jrrs@frontiernet.net>
+
+	* utils/start-stop-daemon.c (do_help): Add '-r' option to the help
+	output.
+
 2006-04-04  Guillem Jover  <guillem@debian.org>
 
 	* utils/start-stop-daemon.c (main): Prefix the chroot path, if any,
