Use mustsetvar when setting the value of the sversion variable in dpkg-buildpackage (Andrew Suffield). Closes: #158953

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,8 @@ dpkg (1.13.18~) UNRELEASED; urgency=low
     start-stop-daemon. Closes: #318771, #333066
   * Add '-r' to the help output of start-stop-daemon (Jared Spiegel).
     Closes: #354869
+  * Use mustsetvar when setting the value of the sversion variable in
+    dpkg-buildpackage (Andrew Suffield). Closes: #158953
 
  -- Christian Perrier <bubulle@debian.org>  Tue, 21 Mar 2006 20:46:24 +0100
 
