Fixed small error in Dutch translation, thanks to Marc van den Borre for pointing it out

--- a/po/nl.po
+++ b/po/nl.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.9.4\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-02-17 08:49+0200\n"
-"PO-Revision-Date: 2006-02-19 12:58+0100\n"
+"PO-Revision-Date: 2006-04-04 10:08+0100\n"
 "Last-Translator: Bart Cornelis <cobaco@linux.be>\n"
 "Language-Team: Dutch <debian-l10n-dutch@debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2610,7 +2610,7 @@ msgstr "dpkg: waarschuwing - voorafhankelijkheisprobleem wordt genegeerd !\n"
 #: src/processarc.c:284
 #, c-format
 msgid "Preparing to replace %s %s (using %s) ...\n"
-msgstr "Voorbereiden om %s %s te vervangen (met %s) ...\n"
+msgstr "Voorbereiden om %s %s te vervangen (door %s) ...\n"
 
 #: src/processarc.c:289
 #, c-format
