--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dpkg (1.13.18~) UNRELEASED; urgency=low
   * Romanian (Sorin Batariuc). Closes: #356664
   * Danish (Claus Hindsgaul). Closes: #356188
   * Polish (Robert Luberda).
+  * Dutch (Bart Cornelis).
 
   [ Updated dselect Translations ]
   * Spanish (Javier Fernández-Sanguino Peña). Closes: #357912
@@ -16,7 +17,7 @@ dpkg (1.13.18~) UNRELEASED; urgency=low
 
   [ Christian Perrier ]
   * Correct typos in man pages. Thanks to A. Costa for spotting them
-    Closes: #358091, #358092, #358093, #358094, #358095 
+    Closes: #358091, #358092, #358093, #358094, #358095
 
   [ Guillem Jover ]
   * Add a '[!]' in --force-all help denoting that it is a dangerous option.
@@ -28,7 +29,7 @@ dpkg (1.13.18~) UNRELEASED; urgency=low
   * Use mustsetvar when setting the value of the sversion variable in
     dpkg-buildpackage (Andrew Suffield). Closes: #158953
 
- -- Christian Perrier <bubulle@debian.org>  Tue, 21 Mar 2006 20:46:24 +0100
+ -- Bart Cornelis (cobaco) <cobaco@linux.be>  Tue,  4 Apr 2006 10:24:24 +0200
 
 dpkg (1.13.17) unstable; urgency=low
 
