Update Russian dselect and man pages translations

--- a/man/ru/822-date.1.ru.po
+++ b/man/ru/822-date.1.ru.po
@@ -1,25 +1,27 @@
+# translation of dpkg_1.13.17_822-date.1.ru.po to Russian
 # SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# Copyright (C) 2006 Free Software Foundation, Inc.
+# Yuri Kozlov <kozlov.y@gmail.com>, 2006.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
+"PO-Revision-Date: 2006-04-08 13:50+0300\n"
+"Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=KOI8-R\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.9.1\n"
 
 # type: Plain text
 #.  Hey, Emacs!  This is an -*- nroff -*- source file.
 #.  Authors: Ian Jackson
 #: 822-date.1:3
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "822-date"
-msgstr "B<822-date>"
+msgstr "822-date"
 
 # type: TH
 #.  Hey, Emacs!  This is an -*- nroff -*- source file.
@@ -27,7 +29,7 @@ msgstr "B<822-date>"
 #: 822-date.1:3
 #, no-wrap
 msgid "2008-02-28"
-msgstr ""
+msgstr "2008-02-28"
 
 # type: TH
 #.  Hey, Emacs!  This is an -*- nroff -*- source file.
@@ -35,7 +37,7 @@ msgstr ""
 #: 822-date.1:3
 #, no-wrap
 msgid "Debian Project"
-msgstr "Проект Debian"
+msgstr "п÷я─п╬п╣п╨я┌ Debian"
 
 # type: TH
 #.  Hey, Emacs!  This is an -*- nroff -*- source file.
@@ -43,24 +45,24 @@ msgstr "Проект Debian"
 #: 822-date.1:3
 #, no-wrap
 msgid "dpkg utilities"
-msgstr "утилиты dpkg"
+msgstr "я┐я┌п╦п╩п╦я┌я▀ dpkg"
 
 # type: SH
 #: 822-date.1:4
 #, no-wrap
 msgid "NAME"
-msgstr "НАЗВАНИЕ"
+msgstr "п²п░п≈п▓п░п²п≤п∙"
 
 # type: Plain text
 #: 822-date.1:6
 msgid "822-date - Print date and time in RFC822 format"
-msgstr "822-date - печатает дату и время в формате RFC822"
+msgstr "822-date -- п╡я▀п╡п╬п╢п╦я┌ п╢п╟я┌я┐ п╦ п╡я─п╣п╪я▐ п╡ я└п╬я─п╪п╟я┌п╣ RFC822"
 
 # type: SH
 #: 822-date.1:7
 #, no-wrap
 msgid "SYNOPSIS"
-msgstr "СИНТАКСИС"
+msgstr "п║п≤п²п╒п░п п║п≤п║"
 
 # type: Plain text
 #: 822-date.1:9
@@ -71,7 +73,7 @@ msgstr "B<822-date>"
 #: 822-date.1:10
 #, no-wrap
 msgid "DESCRIPTION"
-msgstr "ОПИСАНИЕ"
+msgstr "п·п÷п≤п║п░п²п≤п∙"
 
 # type: Plain text
 #: 822-date.1:14
@@ -79,39 +81,37 @@ msgid ""
 "B<822-date> displays the current date and time in the format described in "
 "RFC822, using a numeric timezone offset as recommended in RFC1123."
 msgstr ""
-"B<822-date> показывает текущую дату и время в соответствии с форматом, "
-"описанным в RFC822, используя числовое смещение часового пояса, согласно "
+"B<822-date> п©п╬п╨п╟п╥я▀п╡п╟п╣я┌ я┌п╣п╨я┐я┴я┐я▌ п╢п╟я┌я┐ п╦ п╡я─п╣п╪я▐ п╡ я│п╬п╬я┌п╡п╣я┌я│я┌п╡п╦п╦ я│ я└п╬я─п╪п╟я┌п╬п╪, "
+"п╬п©п╦я│п╟п╫п╫я▀п╪ п╡ RFC822, п╦я│п©п╬п╩я▄п╥я┐я▐ я┤п╦я│п╩п╬п╡п╬п╣ я│п╪п╣я┴п╣п╫п╦п╣ я┤п╟я│п╬п╡п╬пЁп╬ п©п╬я▐я│п╟, я│п╬пЁп╩п╟я│п╫п╬ "
 "RFC1123."
 
 # type: SH
 #: 822-date.1:15
 #, no-wrap
 msgid "OPTIONS"
-msgstr "ПАРАМЕТРЫ"
+msgstr "п÷п░п═п░п°п∙п╒п═п╚"
 
 # type: Plain text
 #: 822-date.1:18
 msgid "B<822-date> does not take any arguments or options."
-msgstr "B<822-date> не использует аргументов или параметров."
+msgstr "B<822-date> п╫п╣ п╦я│п©п╬п╩я▄п╥я┐п╣я┌ п╟я─пЁя┐п╪п╣п╫я┌п╬п╡ п╦п╩п╦ п©п╟я─п╟п╪п╣я┌я─п╬п╡."
 
 # type: SH
 #: 822-date.1:19
 #, no-wrap
 msgid "BUGS"
-msgstr "ОШИБКИ РЕАЛИЗАЦИИ"
+msgstr "п·п╗п≤п▒п п≤ п═п∙п░п⌡п≤п≈п░п╕п≤п≤"
 
 # type: Plain text
 #: 822-date.1:22
-#, fuzzy
 msgid "This facility really ought to be part of B<date>(1)."
-msgstr ""
-"На самом деле эта функциональность должна находиться в программе B<date>(1)."
+msgstr "п²п╟ я│п╟п╪п╬п╪ п╢п╣п╩п╣ я█я┌я┐ п╥п╟п╢п╟я┤я┐ п╢п╬п╩п╤п╫п╟ п╡я▀п©п╬п╩п╫я▐я┌я▄ п©я─п╬пЁя─п╟п╪п╪п╟ B<date>(1)."
 
 # type: SH
 #: 822-date.1:23
 #, no-wrap
 msgid "SEE ALSO"
-msgstr "СМОТРИ ТАКЖЕ"
+msgstr "п║п°п·п╒п═п≤ п╒п░п п√п∙"
 
 # type: Plain text
 #: 822-date.1:26
@@ -136,22 +136,14 @@ msgstr "B<date>(1)."
 #: 822-date.1:32
 #, no-wrap
 msgid "AUTHOR"
-msgstr "АВТОР"
+msgstr "п░п▓п╒п·п═"
 
 # type: Plain text
 #: 822-date.1:35
-#, fuzzy
 msgid ""
 "B<822-date> and this manpage were written by Ian Jackson. They are hereby "
 "placed by him into the public domain."
 msgstr ""
-"B<822-date> и эту страницу руководства написал и передал в общественное "
-"достояние Ian Jackson."
+"B<822-date> п╦ я█я┌я┐ я│я┌я─п╟п╫п╦я├я┐ я─я┐п╨п╬п╡п╬п╢я│я┌п╡п╟ п╫п╟п©п╦я│п╟п╩ п╦ п©п╣я─п╣п╢п╟п╩ п╡ п╬п╠я┴п╣я│я┌п╡п╣п╫п╫п╬п╣ "
+"п╢п╬я│я┌п╬я▐п╫п╦п╣ Ian Jackson."
 
-# type: TH
-#~ msgid "822-DATE"
-#~ msgstr "822-DATE"
-
-# type: TH
-#~ msgid "14th August 1996"
-#~ msgstr "14 августа 1996"
