--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-08  Yuri Kozlov <kozlov.y@gmail.com>
+
+	* ru.po: Updated to 286t.
+	
 2006-03-24  Robert Luberda <robert@debian.org>
 
 	* pl.po: Updated to 286t.
