--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,11 @@
+2006-04-08  Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru/822-date.1.ru.po: 20t
+	* ru/deb-control.5.ru.po: 19t
+	* ru/dpkg-checkbuilddeps.1.ru.po: 19t
+	* ru/dpkg.1.ru.po: 217t
+	* ru/start-stop-daemon.8.ru.po: 63t
+	
 2006-03-26  Christian Perrier  <bubulle@debian.org>
 
 	* fr/dpkg-source.1.fr.po.addendum: typo corrected, thanks 
