--- a/man/ru/dpkg-checkbuilddeps.1.ru.po
+++ b/man/ru/dpkg-checkbuilddeps.1.ru.po
@@ -1,158 +1,143 @@
+# translation of dpkg_1.13.17_dpkg-checkbuilddeps.1.ru.po to Russian
 # SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# Copyright (C) 2006 Free Software Foundation, Inc.
+# Yuri Kozlov <kozlov.y@gmail.com>, 2006.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
+"PO-Revision-Date: 2006-04-08 17:38+0300\n"
+"Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=KOI8-R\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.9.1\n"
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg-checkbuilddeps"
-msgstr "B<dpkg-checkbuilddeps> -B [I<файл control>]"
+msgstr "dpkg-checkbuilddeps"
 
 # type: TH
 #: dpkg-checkbuilddeps.1:1
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "2006-02-28"
 
 # type: TH
 #: dpkg-checkbuilddeps.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Debian Project"
-msgstr "Проект Debian"
+msgstr "п÷я─п╬п╣п╨я┌ Debian"
 
 # type: TH
 #: dpkg-checkbuilddeps.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg utililties"
-msgstr "утилиты dpkg"
+msgstr "я┐я┌п╦п╩п╦я┌я▀ dpkg"
 
 # type: SH
 #: dpkg-checkbuilddeps.1:2
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "NAME"
-msgstr "НАЗВАНИЕ"
+msgstr "п²п░п≈п▓п░п²п≤п∙"
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:4
-#, fuzzy
 msgid "dpkg-checkbuilddeps - check build dependencies and conflicts"
-msgstr "dpkg-checkbuilddeps -- проверяет зависимости и конфликты при сборке"
+msgstr "dpkg-checkbuilddeps -- п©я─п╬п╡п╣я─я▐п╣я┌ я│п╠п╬я─п╬я┤п╫я▀п╣ п╥п╟п╡п╦я│п╦п╪п╬я│я┌п╦ п╦ п╨п╬п╫я└п╩п╦п╨я┌я▀"
 
 # type: SH
 #: dpkg-checkbuilddeps.1:5
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SYNOPSIS"
-msgstr "СИНТАКСИС"
+msgstr "п║п≤п²п╒п░п п║п≤п║"
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:7
-#, fuzzy
 msgid "B<dpkg-checkbuilddeps> B<-B> [I<control-file>]"
-msgstr "B<dpkg-checkbuilddeps> -B [I<файл control>]"
+msgstr "B<dpkg-checkbuilddeps> -B<-B> [I<я└п╟п╧п╩ control>]"
 
 # type: SH
 #: dpkg-checkbuilddeps.1:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "DESCRIPTION"
-msgstr "ОПИСАНИЕ"
+msgstr "п·п÷п≤п║п░п²п≤п∙"
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:12
-#, fuzzy
 msgid ""
 "This program checks the installed packages in the system against the build "
 "dependencies and build conflicts listed in the control file. If any are not "
 "met, it displays them and exits with a nonzero return code."
 msgstr ""
-"Эта программа проверяет установленные в системе пакеты на предмет сборочных "
-"зависимостей и сборочных конфликтов, описанных в файле control.  Если какие-"
-"то из этих зависимостей или конфликтов не удовлетворены, то об этом "
-"сообщается и происходит выход с ненулевым кодом возврата."
+"п╜я┌п╟ п©я─п╬пЁя─п╟п╪п╪п╟ п©я─п╬п╡п╣я─я▐п╣я┌ я┐я│я┌п╟п╫п╬п╡п╩п╣п╫п╫я▀п╣ п╡ я│п╦я│я┌п╣п╪п╣ п©п╟п╨п╣я┌я▀ п╫п╟ п©я─п╣п╢п╪п╣я┌ я│п╠п╬я─п╬я┤п╫я▀я┘ "
+"п╥п╟п╡п╦я│п╦п╪п╬я│я┌п╣п╧ п╦ п╨п╬п╫я└п╩п╦п╨я┌п╬п╡, п╬п©п╦я│п╟п╫п╫я▀я┘ п╡ я└п╟п╧п╩п╣ control. п∙я│п╩п╦ п╨п╟п╨п╦п╣-я┌п╬ п╦п╥ я█я┌п╦я┘ "
+"п╥п╟п╡п╦я│п╦п╪п╬я│я┌п╣п╧ п╦п╩п╦ п╨п╬п╫я└п╩п╦п╨я┌п╬п╡ п╫п╣ я┐п╢п╬п╡п╩п╣я┌п╡п╬я─п╣п╫я▀, я┌п╬ п╬п╠ я█я┌п╬п╪ я│п╬п╬п╠я┴п╟п╣я┌я│я▐ п╦ "
+"я─п╟п╠п╬я┌п╟ п╥п╟п╡п╣я─я┬п╟п╣я┌я│я▐ я│ п╫п╣п╫я┐п╩п╣п╡я▀п╪ п╨п╬п╢п╬п╪ п╡п╬п╥п╡я─п╟я┌п╟."
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:15
-#, fuzzy
 msgid ""
 "By default, I<debian/control> is read, but an alternate control filename may "
 "be specified on the command line."
 msgstr ""
-"По умолчанию читается B<debian/control>, но в командной строке можно задать "
-"другое имя управляющего файла."
+"п÷п╬ я┐п╪п╬п╩я┤п╟п╫п╦я▌ я┤п╦я┌п╟п╣я┌я│я▐ |<debian/control>, п╫п╬ п╡ п╨п╬п╪п╟п╫п╢п╫п╬п╧ я│я┌я─п╬п╨п╣ п╪п╬п╤п╫п╬ п╥п╟п╢п╟я┌я▄ "
+"п╢я─я┐пЁп╬п╣ п╦п╪я▐ я└п╟п╧п╩п╟ control."
 
 # type: SH
 #: dpkg-checkbuilddeps.1:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "OPTIONS"
-msgstr "ПАРАМЕТРЫ"
+msgstr "п÷п░п═п░п°п∙п╒п═п╚"
 
 # type: TP
 #: dpkg-checkbuilddeps.1:17
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-B>"
-msgstr "I<-B>"
+msgstr "B<-B>"
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:21
-#, fuzzy
 msgid ""
 "Ignore I<Build-Depends-Indep> lines. Use when no arch-indep packages will be "
 "built."
 msgstr ""
-"Игнорировать строки Build-Depends-Indep.  Используется, если пакеты, "
-"независящие от архитектуры, не будут собираться."
+"п≤пЁп╫п╬я─п╦я─п╬п╡п╟я┌я▄ я│я┌я─п╬п╨п╦ |<Build-Depends-Indep>. п≤я│п©п╬п╩я▄п╥я┐п╣я┌я│я▐, п╣я│п╩п╦ п©п╟п╨п╣я┌я▀, "
+"п╫п╣п╥п╟п╡п╦я│я▐я┴п╦п╣ п╬я┌ п╟я─я┘п╦я┌п╣п╨я┌я┐я─я▀ п╫п╣ я│п╬п╠п╦я─п╟я▌я┌я│я▐."
 
 # type: SH
 #: dpkg-checkbuilddeps.1:22
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "AUTHOR"
-msgstr "АВТОР"
+msgstr "п░п▓п╒п·п═"
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:24
-#, fuzzy
 msgid "Copyright 2001 Joey Hess"
 msgstr "Copyright 2001 Joey Hess"
 
 # type: UR
 #: dpkg-checkbuilddeps.1:24
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "mailto:joeyh@debian.org"
 msgstr "mailto:joeyh@debian.org"
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:26
-#, fuzzy
 msgid "E<lt>joeyh@debian.orgE<gt>."
-msgstr "E<lt>joeyh@debian.orgE<gt>"
+msgstr "E<lt>joeyh@debian.orgE<gt>."
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:29
-#, fuzzy
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions. There is NO warranty."
 msgstr ""
-"Это свободная программа; см. Универсальную Общественную Лицензии GNU версии"
-"\\~2 или более позднюю, где изложены условия распространения.  НИКАКИХ "
-"гарантий."
+"п╜я┌п╬ я│п╡п╬п╠п╬п╢п╫п╟я▐ п©я─п╬пЁя─п╟п╪п╪п╟; я│п╪п╬я┌я─п╦я┌п╣ пёп╫п╦п╡п╣я─я│п╟п╩я▄п╫я┐я▌ п·п╠я┴п╣я│я┌п╡п╣п╫п╫я┐я▌ п⌡п╦я├п╣п╫п╥п╦п╦ GNU "
+"п╡п╣я─я│п╦п╦ 2 п╦п╩п╦ п╠п╬п╩п╣п╣ п©п╬п╥п╢п╫я▌я▌, пЁп╢п╣ п╦п╥п╩п╬п╤п╣п╫я▀ я┐я│п╩п╬п╡п╦я▐ я─п╟я│п©я─п╬я│я┌я─п╟п╫п╣п╫п╦я▐. "
+"п²п≤п п░п п≤п╔ пЁп╟я─п╟п╫я┌п╦п╧."
 
-# type: TH
-#, fuzzy
-#~ msgid "DPKG-CHECKBUILDDEPS"
-#~ msgstr "DPKG-CHECKBUILDDEPS"
-
-# type: TH
-#, fuzzy
-#~ msgid "February 2001"
-#~ msgstr "Февраль 2001"
