The police is back.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,30 +1,30 @@
 2006-04-08  Yuri Kozlov  <kozlov.y@gmail.com>
 
-	* ru/822-date.1.ru.po: 20t
-	* ru/deb-control.5.ru.po: 19t
-	* ru/dpkg-checkbuilddeps.1.ru.po: 19t
-	* ru/dpkg.1.ru.po: 217t
-	* ru/start-stop-daemon.8.ru.po: 63t
-	
+	* ru/822-date.1.ru.po: 20t.
+	* ru/deb-control.5.ru.po: 19t.
+	* ru/dpkg-checkbuilddeps.1.ru.po: 19t.
+	* ru/dpkg.1.ru.po: 217t.
+	* ru/start-stop-daemon.8.ru.po: 63t.
+
 2006-03-26  Christian Perrier  <bubulle@debian.org>
 
-	* fr/dpkg-source.1.fr.po.addendum: typo corrected, thanks 
-	  to Nicolas Bonifas who spotted it
-	* fr/dpkg-source.1.fr.po: typo corrected, thanks 
-	  to Nicolas Bonifas who spotted it
-	
+	* fr/dpkg-source.1.fr.po.addendum: Typo corrected, thanks
+	to Nicolas Bonifas who spotted it.
+	* fr/dpkg-source.1.fr.po: Typo corrected, thanks
+	to Nicolas Bonifas who spotted it.
+
 2006-03-04  Christian Perrier  <bubulle@debian.org>
 
-	* dpkg-architecture.1: typos corrections
-	* dpkg-checkbuilddeps.1: Likewise
-	* dpkg-name.1: Likewise
-	* dpkg-source.1: Likewise
-	* deb-control.5: Likewise
-	
+	* dpkg-architecture.1: Typos corrections.
+	* dpkg-checkbuilddeps.1: Likewise.
+	* dpkg-name.1: Likewise.
+	* dpkg-source.1: Likewise.
+	* deb-control.5: Likewise.
+
 2006-03-04  Philippe Batailler <philippe.batailler@free.fr>
 
 	* fr/*: Applied Guillem's work to french.
-	
+
 2006-02-28  Guillem Jover  <guillem@debian.org>
 
 	* C/dpkg.1 (SEE ALSO): Add dpkg-query(1).
