--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,8 +1,8 @@
-2006-04-04  Bart Cornelis <cobaco@linux.be>
+2006-04-04  Bart Cornelis  <cobaco@linux.be>
 
-	* nl.po Fixed small error reported bij Mark van den Borre 
+	* nl.po: Fixed small error reported bij Mark van den Borre.
 
-2006-03-22  Robert Luberda <robert@debian.org>
+2006-03-22  Robert Luberda  <robert@debian.org>
 
 	* pl.po: Updated to 729t.
 
