Pass '--admindir' option over to dpkg-query when passing '--admindir' or '--root' to dpkg (initial patch by Branden Robinson). Closes: #153305, #271041, #282853, #307715, #355915

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-04-04   Branden Robinson  <branden@debian.org>,
+	     Guillem Jover  <guillem@debian.org>
+
+	* src/main.c (execbackend): Pass '--admindir' over to dpkg-query
+	when passing '--admindir' or '--root' to dpkg.
+
 2006-04-04  Andrew Suffield  <asuffield@debian.org>
 
 	* dpkg-buildpackage.sh: Use mustsetvar to set sversion variable.
