Support system library directories in dpkg-shlibdeps symlinked from '/lib/ldconfig'. Closes: #356452

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
-2006-04-04   Branden Robinson  <branden@debian.org>,
+2006-04-09  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-shlibdeps.pl: Support system library directories
+	symlinked from '/lib/ldconfig/'.
+
+2006-04-09   Branden Robinson  <branden@debian.org>,
 	     Guillem Jover  <guillem@debian.org>
 
 	* src/main.c (execbackend): Pass '--admindir' over to dpkg-query
