--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,8 @@ dpkg (1.13.18~) UNRELEASED; urgency=low
   * Pass '--admindir' option over to dpkg-query when passing '--admindir' or
     '--root' to dpkg (initial patch by Branden Robinson).
     Closes: #153305, #271041, #282853, #307715, #355915
+  * Support system library directories in dpkg-shlibdeps symlinked from
+    '/lib/ldconfig'. Closes: #356452
 
   [ Christian Perrier ]
   * 
