--- a/man/C/dpkg.1
+++ b/man/C/dpkg.1
@@ -1,4 +1,4 @@
-.TH dpkg 1 "2006-02-28" "Debian Project" "dpkg suite"
+.TH dpkg 1 "2006-04-09" "Debian Project" "dpkg suite"
 .SH NAME
 dpkg - package manager for Debian
 .
@@ -195,7 +195,8 @@ system. \fBdpkg\fP will suggest what to do with them to get them
 working.
 .TP
 \fBdpkg \-\-get\-selections\fP [\fIpackage-name-pattern\fP...]
-Get list of package selections, and write it to stdout.
+Get list of package selections, and write it to stdout. Without a pattern,
+packages marked with state purge will not be shown.
 .TP
 .B dpkg \-\-set\-selections
 Set package selections using file read from stdin. This file should be
