--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,10 @@
+2006-04-09  Guillem Jover  <guillem@debian.org>
+
+	* C/dpkg.1: Document that '--get-selections' without a pattern will
+	not list packages in state purge.
+	* C/dpkg-query.1: Document that '-l' without a pattern will not list
+	packages in state purge.
+
 2006-04-08  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru/822-date.1.ru.po: 20t.
