--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,7 @@ dpkg (1.13.18~) UNRELEASED; urgency=low
     '/lib/ldconfig'. Closes: #356452
   * Document that 'dpkg --get-selections' and 'dpkg-query -l' without a
     pattern will not list packages in state purge. Closes: #355633
+  * Obsolete force/refuse 'auto-select' dpkg option.
 
   [ Christian Perrier ]
   * 
