--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-10  Guillem Jover  <guillem@debian.org>
+
+	* C/dpkg.1: Remove mention of obsolete force/refuse 'auto-select'
+	option.
+
 2006-04-09  Guillem Jover  <guillem@debian.org>
 
 	* C/dpkg.1: Document that '--get-selections' without a pattern will
