Use '--clear-selections' in the dpkg man page example on how to transfer the status to another installation. Closes: #137442

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,8 @@ dpkg (1.13.18~) UNRELEASED; urgency=low
   * Obsolete force/refuse 'auto-select' dpkg option.
   * Add new '--clear-selections' option to dpkg (Andrew Suffield).
     Closes: #112388
+  * Use '--clear-selections' in the dpkg man page example on how to transfer
+    the status to another installation. Closes: #137442
 
   [ Christian Perrier ]
   * 
