--- a/man/C/dpkg.1
+++ b/man/C/dpkg.1
@@ -589,8 +589,10 @@ To make a local copy of the package selection states:
 You might transfer this file to another computer, and install it there
 with:
 .br
+\fB     dpkg \-\-clear\-selections\fP
 \fB     dpkg \-\-set\-selections <myselections\fP
 .br
+
 Note that this will not actually install or remove anything, but just
 set the selection state on the requested packages. You will need some
 other application to actually download and install the requested
