--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-10  Guillem Jover  <guillem@debian.org>
+
+	* C/dpkg.1: Document the new way to replicate the package status to
+	another installation by using '--clear-selections'.
+
 2006-04-10  Andrew Suffield  <asuffield@debian.org>
 
 	* C/dpkg.1: Document the new '--clear-selections' option.
