--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-10  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac: Release 1.13.18.
+
 2006-04-10  Andrew Suffield  <asuffield@debian.org>
 
 	* src/main.h (clearselections): New prototype.
