--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.13.18~) UNRELEASED; urgency=low
+dpkg (1.13.18) unstable; urgency=low
 
   [ Updated dpkg Translations ]
   * Romanian (Sorin Batariuc). Closes: #356664
@@ -44,10 +44,7 @@ dpkg (1.13.18~) UNRELEASED; urgency=low
   * Use '--clear-selections' in the dpkg man page example on how to transfer
     the status to another installation. Closes: #137442
 
-  [ Christian Perrier ]
-  * 
-
- -- Christian Perrier <bubulle@debian.org>  Sat,  8 Apr 2006 18:51:32 +0200
+ -- Guillem Jover <guillem@debian.org>  Mon, 10 Apr 2006 06:40:22 +0300
 
 dpkg (1.13.17) unstable; urgency=low
 
