--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-04-10  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Bump version to 1.13.19~.
+
+2006-04-10  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac: Release 1.13.18.
 
 2006-04-10  Andrew Suffield  <asuffield@debian.org>
