--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+dpkg (1.13.19~) UNRELEASED; urgency=low
+
+
+ -- Guillem Jover <guillem@debian.org>  Mon, 10 Apr 2006 07:03:36 +0300
+
 dpkg (1.13.18) unstable; urgency=low
 
   [ Updated dpkg Translations ]
