French translation update

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,7 +1,12 @@
+2006-04-10  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Updated to 731t
+
 2006-04-10  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
-	* *.po: Merged with dpkg.pot.
+	* *.po: Merged with dpkg.pot. Formerly complete translations 
+	  become 727t4f
 
 2006-04-04  Bart Cornelis  <cobaco@linux.be>
 
