--- a/po/fr.po
+++ b/po/fr.po
@@ -23,7 +23,7 @@ msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-04-10 06:33+0300\n"
-"PO-Revision-Date: 2006-02-17 08:51+0200\n"
+"PO-Revision-Date: 2006-04-10 07:03+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2315,7 +2315,7 @@ msgstr ""
 "reproduction.\n"
 
 #: src/main.c:57
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -2393,11 +2393,14 @@ msgstr ""
 "  --unpack          <nom fichier .deb> ... | -R|--recursive <rép> ...\n"
 "  -A|--record-avail <nom fichier .deb> ... | -R|--recursive <rép> ...\n"
 "  --configure           <nom paquet> ... | -a|--pending\n"
-"  -r|--remove | -P|--purge <nom paquet> ... | -a|--pending\n"
+"  -r|--remove           <nom paquet> ... | -a|--pending\n"
+"  -P|--purge            <nom paquet> ... | -a|--pending\n"
 "  --get-selections [<motif> ...]     Afficher la liste des sélections\n"
 "                                             sur la sortie standard\n"
 "  --set-selections                   Paramétrer la liste des sélections\n"
 "                                             à partir de l'entrée standard\n"
+"  --clear-selections                 Supprimer tous les paquets\n"
+"                                     non essentiels\n"
 "  --update-avail <fichier paquets>   Remplacer les informations sur\n"
 "                                             les paquets disponibles\n"
 "  --merge-avail <fichier paquets>    Fusionner les informations avec\n"
@@ -2581,7 +2584,7 @@ msgid "invalid integer for --%s: `%.250s'"
 msgstr "entier incorrect pour --%s « %.250s »"
 
 #: src/main.c:296
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
@@ -2624,9 +2627,7 @@ msgstr ""
 "  sortir en erreur :      --refuse-<option>,<option>,... | --no-force-"
 "<option>,...\n"
 " Forcer des choses :\n"
-"  all                    Sélectionner toutes les options de forçage\n"
-"  auto-select [*]        (Dé)sélectionner les paquets à installer "
-"(supprimer)\n"
+"  all [!]                Sélectionner toutes les options de forçage\n"
 "  downgrade [*]          Remplacer un paquet avec une version inférieure\n"
 "  configure-any          Configurer tous les paquets en rapport\n"
 "  hold                   Traiter même les paquets à garder (on hold)\n"
@@ -2677,9 +2678,9 @@ msgid "unknown force/refuse option `%.*s'"
 msgstr "option de forçage/refus « %.*s » inconnue"
 
 #: src/main.c:346
-#, fuzzy, c-format
+#, c-format
 msgid "Warning: obsolete force/refuse option `%s'\n"
-msgstr "Attention : option obsolète « --%s »\n"
+msgstr "Attention : option de forçage/refus « %s » obsolète\n"
 
 #: src/main.c:469 src/main.c:479 src/main.c:487
 msgid "couldn't malloc in execbackend"
@@ -3425,9 +3426,8 @@ msgid "read error on standard input"
 msgstr "erreur de lecture sur l'entrée standard"
 
 #: src/select.c:154
-#, fuzzy
 msgid "--clear-selections does not take any argument"
-msgstr "--set-selections ne prend aucun argument"
+msgstr "--clear-selections ne prend aucun argument"
 
 #: src/update.c:44
 #, c-format
