--- a/po/gl.po
+++ b/po/gl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-04-10 06:33+0300\n"
-"PO-Revision-Date: 2006-02-17 08:52+0200\n"
+"PO-Revision-Date: 2006-04-10 16:35+0200\n"
 "Last-Translator: Jacobo Tarrío <jtarrio@debian.org>\n"
 "Language-Team: Galician <trasno@ceu.fi.udc.es>\n"
 "MIME-Version: 1.0\n"
@@ -2214,7 +2214,7 @@ msgstr ""
 "Vexa %s --license para os detalles de copyright e licencia.\n"
 
 #: src/main.c:57
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -2296,6 +2296,8 @@ msgstr ""
 "  -P|--purge         <paquete> ... | -a|--pending\n"
 "  --get-selections [<patrón> ...]      Amosa a lista de seleccións.\n"
 "  --set-selections                     Estabrece as seleccións de paquetes.\n"
+"  --clear-selections                   Deselecciona os paquetes non "
+"esenciais.\n"
 "  --update-avail <ficheiro Packages>   Substitúe a información de paquetes\n"
 "                                           dispoñibles.\n"
 "  --merge-avail <ficheiro Packages>    Mestura coa información do ficheiro.\n"
@@ -2459,7 +2461,7 @@ msgid "invalid integer for --%s: `%.250s'"
 msgstr "número enteiro non válido para --%s: \"%.250s\""
 
 #: src/main.c:296
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
@@ -2502,9 +2504,7 @@ msgstr ""
 "  parar cun erro:        --refuse-<cousa>,<cousa>,... | --no-force-"
 "<cousa>,...\n"
 " Forzar cousas:\n"
-"  all                  Estabrece tódalas opcións de forzado\n"
-"  auto-select [*]      (De)selecciona os paquetes para os instalar "
-"(eliminar)\n"
+"  all [!]              Estabrece tódalas opcións de forzado\n"
 "  downgrade [*]        Substitúe un paquete por unha versión anterior\n"
 "  configure-any        Configura un paquete que poida axudar a estte\n"
 "  hold                 Procesa os paquetes incidentais mesmo se están "
@@ -2541,9 +2541,9 @@ msgid "unknown force/refuse option `%.*s'"
 msgstr "opción de forzar/rexeitar \"%.*s\" descoñecida"
 
 #: src/main.c:346
-#, fuzzy, c-format
+#, c-format
 msgid "Warning: obsolete force/refuse option `%s'\n"
-msgstr "Aviso: opción \"--%s\" obsoleta\n"
+msgstr "Aviso: opción de forzado/rexeitado \"%s\" obsoleta\n"
 
 #: src/main.c:469 src/main.c:479 src/main.c:487
 msgid "couldn't malloc in execbackend"
@@ -3280,9 +3280,8 @@ msgid "read error on standard input"
 msgstr "erro de lectura na entrada estándar"
 
 #: src/select.c:154
-#, fuzzy
 msgid "--clear-selections does not take any argument"
-msgstr "--set-selections non toma ningún argumento"
+msgstr "--clear-selections non toma ningún argumento"
 
 #: src/update.c:44
 #, c-format
